[tool.poetry]
name = "flaskscan"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <mpereirassa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
scanapi = "^2.0.0"
flask-jwt-extended = "^3.24.1"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
